--- a/index.html
+++ b/index.html
@@ -924,12 +924,13 @@
             </div>
     </div>
     <div class="album-gallery container">
-        <a href="./" title="img1"><img src="./images/benzin.webp" alt="img1" width="200px" height="200px"></a>
-        <a href="./" title="img2"><img src="./images/majles.jpg" alt="img2" width="200px" height="200px"></a>
-        <a href="./" title="img3"><img src="./images/nahavandjpg" alt="img3" width="200px" height="200px"></a>
-        <a href="./" title="img4"><img src="./images/rain.jpg" alt="img4" width="200px" height="200px"></a>
-        <a href="./" title="img5"><img src="./images/roshd.jpg" alt="img5" width="200px" height="200px"></a>
-        <a href="./" title="img6"><img src="./images/vaccine.webp" alt="img6" width="200px" height="200px"></a>
+      <div class="gallery"> <a href="./" title="img1"><img src="./images/benzin.webp" alt="img1" width="200px" height="200px"></a></div>
+      <div class="gallery"> <a href="./" title="img2"><img src="./images/majles.jpg" alt="img2" width="200px" height="200px"></a></div>
+      <div class="gallery">      <a href="./" title="img3"><img src="./images/nahavandjpg" alt="img3" width="200px" height="200px"></a></div>
+      <div class="gallery"> <a href="./" title="img4"><img src="./images/rain.jpg" alt="img4" width="200px" height="200px"></a></div>
+      <div class="gallery"> <a href="./" title="img5"><img src="./images/roshd.jpg" alt="img5" width="200px" height="200px"></a></div>
+      <div class="gallery"><a href="./" title="img6"><img src="./images/vaccine.webp" alt="img6" width="200px" height="200px"></a></div>
+ 
     </div>
     </main>
     <footer>
