--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <div class="headerMain">
             <div class="container">
                 <div class="header-mobile">
-                <div class="logo"><a href="./" title="logo"><img src="./images/aasaam.svg" alt="logo-mobile" width="40" height="40"></a></div>
+                <div class="logo">
+                    <a href="./" title="logo"><img src="./images/aasaam.svg" alt="logo-mobile" width="40" height="40"></a>
+                </div>
                 <div class="header-mobile-left">
                    
                     <div class="search-box">
@@ -46,7 +48,11 @@
             </div>
             <div class="heder-desktop">
                 <div class="header-desktop-right">
-                    <div class="logo"><a href="./" title="logo"><img src="./images/aasaam.svg" alt="logo-desktop" width="60" height="60"></a></div>
+                    <div class="logo"><a href="./" title="logo"><img src="./images/aasaam.svg" alt="logo-desktop" width="60" height="60"></a>
+                        <h1 class="title-page">
+                            نیوز آسام 
+                         </h1>
+                    </div>
                 <div class="menu">
                 <nav>
                     <ul>
