finish my template

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <nav>
                     <ul>
                         <li class="have-submenu">
-                            <div class="title-standard-menu">
-                                سیاسی <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="none" stroke="#fff8f8" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="m17 14l-5-5m0 0l-5 5"/></svg>
+                            <div class="title-standard-menu"><span> سیاسی </span>
+                               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="none" stroke="#fff8f8" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="m17 14l-5-5m0 0l-5 5"/></svg>
                             </div>
                                 <ul class="standard-menu">
                                     <li><a href="/" title="فعالیت سیاسی">فعالیت سیاسی</a></li>
@@ -68,8 +68,8 @@
                         </li>
                         <li><a href="/" title="اجتماعی">اجتماعی</a></li>
                             <li class="have-submenu">
-                                <div class="title-standard-menu">
-                                   علمی <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="none" stroke="#fff8f8" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="m17 14l-5-5m0 0l-5 5"/></svg>
+                                <div class="title-standard-menu"><span>علمی </span>
+                                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="none" stroke="#fff8f8" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="m17 14l-5-5m0 0l-5 5"/></svg>
                                 </div>
                                     <ul class="standard-menu">
                                         <li><a href="/" title="فعالیتعلمی">فعالیت علمی</a></li>
