--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="./library/splide/splide.min.css">
     <title>news</title>
+    <link rel="icon" type="image/x-icon" href="./images/aasaam.ico">
 </head>
 <body>
     <header>
@@ -51,7 +52,7 @@
                     <div class="logo"><a href="/" title="logo"><img src="./images/aasaam.svg" alt="logo-desktop" width="60" height="60"></a>
                         <h1 class="title-page">
                             نیوز آسام 
-                         </h1>
+                         </h1>  
                     </div>
                 <div class="menu">
                 <nav>
